--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,11 @@ img{
 	display: block;
 	margin: auto;
 }
-ul>li{
+.data li{
+	font-weight: normal;
+	font-size: 16px;
+}
+ul li{
 	font-size: 1.5em;
 	font-weight: bold;
 	margin-top: 20px;
